# spectrum

./: .gitignore  README.md  config.py  main.py  pyproject.toml  requirements.txt
config/: config.yaml
core/: __init__.py  analysis.py  artifacts.py  discovery.py  manager.py  pipeline.py  postprocess.py  reporting.py  service.py  state.py  thresholds.py
data/: 20251209_metrics-5s.csv  __init__.py  loader.py  preprocessor.py  processor.py
data/dataset/: timeseries.py
data/source/: 20251203_metrics-30s.csv  20251203_metrics-5s.csv  20251204_metrics-30s.csv  20251204_metrics-5s.csv  20251205_metrics-30s.csv  20251205_metrics-5s.csv  20251206_metrics-30s.csv  (+6 more)
deploy/: README.md  com.spectrum.service.plist  install.sh  spectrum.service  uninstall.sh
models/: __init__.py  anomaly_detection.py  base.py  ensemble.py  gsr.py  gsr_ae.py  historical.py  lstm.py  sr.py  sr.py.bak  usad.py
saved_models/: 5s_ensemble.pth  5s_ensemble_LSTM_5s.pth  5s_ensemble_SR_5s.pth  5s_ensemble_USAD_5s.pth  5s_loader_state.json  5s_processor.joblib  5s_threshold.json
scripts/: historical_threshold_demo.py
tests/: repro_smearing.py  reproduce_issue.py  reproduce_logic.py  simulate_failures.py  simulate_failures_old.py  simulate_run.py  test_algo_per_dim.py  test_core.py  test_cpu_e2e.py  test_cpu_realtime.py  test_cpu_threshold.py  test_green_curve.py  test_gsr_robustness.py  test_historical_enhanced.py  test_manager.py  test_models.py  test_processor.py  test_schema_change.py  test_service_resilience.py
utils/: __init__.py  device.py  errors.py  logger.py  thresholding.py
